# claude-cache

./: .claude.json  CHANGELOG.md  QUICKSTART.md  README.md  pyproject.toml  test_execution_monitor.py  test_intent.py
docs/: CHANGELOG.md  HOW_IT_WORKS.md  INSTALLATION.md  MCP_INTEGRATION.md  QUICKSTART.md
src/cache_for_claude/: __init__.py  agent.py  enhanced_detector.py  lesson_organizer.py  log_state.py
src/claude_cache/: agent.py  cli.py  context_injector.py  fastmcp_server.py  log_watcher.py  mcp_server.py
